--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,16 @@
-environments:
-  production:
-    #mongodb
-    spring.data.mongodb.uri: mongodb://heroku_rkct7jcl:91fn1ah3d7gshmjs8ug8bcljof@ds135624.mlab.com:35624/heroku_rkct7jcl
-    
-    
+spring:
+    profiles: dev
+environment: dev
+#mongodb
+spring.data.mongodb.host: localhost
+spring.data.mongodb.port: 27017
+spring.data.mongodb.database: schoolDb
+
+#spring
+server.port: 8081
+ 
+---
+spring:
+    profiles: heroku
+environment: heroku
+spring.data.mongodb.uri: mongodb://heroku_rkct7jcl:91fn1ah3d7gshmjs8ug8bcljof@ds135624.mlab.com:35624/heroku_rkct7jcl
