--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,44 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	<profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+				<plugins>
+					<!-- Spring Boot Maven Plugin -->
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+		                    <arguments>
+		                        <argument>--spring.profiles.active=dev</argument>
+		                    </arguments>
+		                </configuration>
+					</plugin>
+				</plugins>
+			</build>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <build>
+                <plugins>
+                	<!-- Spring Boot Maven Plugin -->
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <arguments>
+                                <argument>--spring.profiles.active=prod</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+	</profiles> 
 
 </project>
